clusters/demo/step-3b-security-constraints/constraint-required-labels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-app-label
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - webinar-demo
  parameters:
    labels:
      - key: app.kubernetes.io/name
        allowedRegex: ".+"
